tests/specs/test/resource_sanitizer_disabled_override/main.out
Check [WILDCARD]main.ts
running 1 test from [WILDCARD]main.ts
leak ... FAILED (1ms)

 ERRORS 

leak => [WILDCARD]main.ts:3:6
error: Leaks detected:
  - A file was opened during the test, but not closed during the test. Close the file handle by calling `file.close()`.
  - The stdin pipe was opened before the test started, but was closed during the test. Do not close resources in a test that were not created during that test.

 FAILURES 

leak => [WILDCARD]main.ts:3:6

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed
